# ethereum-fraud-pipeline

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
src/eth_fraud_detection/: __init__.py
src/eth_fraud_detection/adapters/: graph_db.py
src/eth_fraud_detection/apps/consumer/: kafka_eth_consumer.py
src/eth_fraud_detection/apps/producer/: kafka_eth_producer.py
src/eth_fraud_detection/core/: __init__.py  constants.py
src/eth_fraud_detection/utils/: logger.py
