[project]
name = "eth-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "muradeliyev", email = "muradaliyev2229@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.13.0",
    "ipykernel>=7.2.0",
    "kafka-python>=2.3.0",
    "karateclub>=1.2.2",
    "neo4j>=6.1.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torch-geometric>=2.7.0",
    "websockets>=16.0",
]

[project.scripts]
eth-fraud-detection = "eth_fraud_detection:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
